Valeria edited the paper, claims near redy for submission

--- a/escrito/urge13.tex
+++ b/escrito/urge13.tex
@@ -29,8 +29,8 @@
 \newcommand{\mc}{\multicolumn}
 
 %% TO ADD NOTES IN TEXT, PUT % BEFORE THE ONE YOU WANT DISABLED
-%\usepackage[disable]{todonotes}                            % notes not showed
-\usepackage[colorinlistoftodos, textsize=small]{todonotes} % show notes
+\usepackage[disable]{todonotes}                            % no show
+%\usepackage[colorinlistoftodos, textsize=small]{todonotes} % show notes
 \newcommand{\emm}[1]{\todo[color=red!15, inline]{\textbf{Eric:} #1}}
 \newcommand{\vp}[1]{\todo[color=green!15, inline]{\textbf{Vale:} #1}}
 \newcommand{\ges}[1]{\todo[color=blue!15, inline]{\textbf{Ges:} #1}}
@@ -293,10 +293,13 @@ The literature analyzing president's fast track authority in the US tries to und
 
 In an excellent and very provocative book, \citet[][:145]{howell.moe.Relic2016} make an argument in favor of giving US presidents fast-track authority in all realms of policy, not just trade agreements. They argue that in order to have a coherent and effective government, a constitutional reform needs to put the president at the center of the legislative process by giving her fast-track powers: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time. [...] [T]he Constitution would be amended to grant the president \emph{permanent} fast-track authority over \emph{all} policy matters (including budgets and appointments).'' If Congress fails to act with a certain period of time, then the presidential proposal should become law. This reform would make the US closer to the design of Uruguay, Ecuador, or Paraguay in Latin America. 
 
-Thus, in all and as part of a literature that highlights the extraordinary legislative influence of presidents in Latin America, emphasis has been placed on their exclusive proposal rights for certain bills, their capacity to veto bills totally and partially, and to propose amendments at different stages of the legislative process \citep{carey.shugart.1998,baldez.carey.1999,aleman.navia.UrgChi.2009,tsebelis.aleman.2005}. Less attention has been devoted to the influence granted to the president when she can declare certain bills urgent and by doing so, affect how congress deals with its agenda. We view this influence as stemming from the prerogative to qualify bills ``urgent'', which apart from acting as a bill accelerator or a signal of presidential priority, in certain cases imposes restrictive rules for floor consideration. Our argument here joins a growing literature on restrictive rules in legislatures worldwide.\footnote{See \citet{dion.huber.1996,doring.restrictiveRules.2003,huber.1996a,krehbielRestrictiveRules1997,heller.2001,weingast.1992,schickler.richRules1997,cox.mccubbins.1997,amorim.cox.mccubbins.2003,calvo.2014argBook,sin.2014,denhartog.2004phd}, among others.} 
+Thus, in all and as part of a literature that highlights the extraordinary legislative influence of presidents in Latin America, emphasis has been placed on presidents' exclusive proposal rights for certain bills, their capacity to veto bills totally and partially, and to propose amendments at different stages of the legislative process \citep{carey.shugart.1998,baldez.carey.1999,aleman.navia.UrgChi.2009,tsebelis.aleman.2005}. Less attention has been devoted to the influence granted to the president when she can declare certain bills urgent and by doing so, affect how congress deals with its agenda. We view this influence as stemming from the prerogative to qualify bills ``urgent'', which in certain cases imposes restrictive rules for floor consideration, apart from acting as a bill accelerator or a signal of presidential priority. Our argument here joins a growing literature on restrictive rules in legislatures worldwide.\footnote{See \citet{dion.huber.1996,doring.restrictiveRules.2003,huber.1996a,krehbielRestrictiveRules1997,heller.2001,weingast.1992,schickler.richRules1997,cox.mccubbins.1997,amorim.cox.mccubbins.2003,calvo.2014argBook,sin.2014,denhartog.2004phd}, among others.} 
 
 \section{Fast-Track Legislation}
 
+In this section we develop a simple example of a bill and two amendments to illustrate how the fast track authority, when combined with restrictive rules for passage, achieves the combined goal of speeding bills along while ensuring the president outcomes of her liking.  In our example, we consider a proposal that aims to offer student grants while also paying for teacher compensations. Three articles, summarized in Table \ref{T:example}, make the bill up. The first funds the program, appropriating \$200. The second splits the funds into equal parts. And the third allocates the parts. So, if approved, students and teachers would receive \$100 each. 
+
+Add tension by assuming a prior commitment of \$150 for teachers. To honor this, a committee member offers an amendment to article 1 (against the committee chair's will). If approved, this would beef up funds to \$300. Committee chairs, or a majority of committee members, or other powerful cameral officers (e.g.\ the Appropriations committee) may or may not be able to derail undesired amendments in committee---by declaring them inadmissible, outside time constraints, adopting special rules, and so forth. This would be a form of \emph{ex-ante} veto: if unwilling to appropriate extra money, the committee may prevent the amendment. In which case, the distributive route remains practicable: less for students, more for teachers. An amendment to article 2, such that teachers get three-fourths of the \$200 fund, would honor the commitment---at the students' expense. If offered later in the process, when the bill enters the floor stages, it should also make it harder for the chair and other veto gates to act against the second amendment. 
 
 \begin{table}
 \centering
@@ -308,10 +311,6 @@ Art 2. & split in two equal parts $(\frac{1}{2}, \frac{1}{2})$          & $(\fra
 Art 3. & one for students, one for teachers & ---                                              \\
 \end{tabular}
 \end{table}
-
-In this section we develop a simple example of a bill and two amendments to illustrate how the fast track authority, when combined with restrictive rules for passage, achieves the combined goal of speeding bills along while ensuring the president outcomes of her liking.  In our example, we consider a proposal that aims to offer student grants while also paying for teacher compensations. Three articles, summarized in Table \ref{T:example}, make the bill up. The first funds the program, appropriating \$200. The second splits the funds into equal parts. And the third allocates the parts. So, if approved, students and teachers would receive \$100 each. 
-
-Add tension by assuming a prior commitment of \$150 for teachers. To honor this, a committee member offers an amendment to article 1 (against the committee chair's will). If approved, this would beef up funds to \$300. Committee chairs, or a majority of committee members, or other powerful cameral officers (e.g.\ the Appropriations committee) may or may not be able to derail undesired amendments in committee---by declaring them inadmissible, outside time constraints, adopting special rules, and so forth. This would be a form of \emph{ex-ante} veto: if unwilling to appropriate extra money, the committee may prevent the amendment. In which case, the distributive route remains practicable: less for students, more for teachers. An amendment to article 2, such that teachers get three-fourths of the \$200 fund, would honor the commitment---at the students' expense. If offered later in the process, when the bill enters the floor stages, it should also make it harder for the chair and other veto gates to act against the second amendment. 
 
 EMM 29/5/18 COMPLICATION FOR GENERALIZATION: FRAME ASSUMES A FORWARD AGENDA, COMMON IN THE WORLD BUT DISTINCT FROM THE BACKWARD AGENDA USED IN THE US (SEE SCHWARTZ CITE) -> INVOLVES KILLING THE STATUS QUO FIRST, THEN AMENDING (US AMENDS FIRST, FINAL VOTE AGAINST SQ)... NOT SURE HOW TO DEAL WITH THIS REGARDLESS OF WHETHER OR NOT AMENDMENT P1 IS DROPPED FROM THE EXAMPLE.
 
