Vale edited urge13

--- a/gesValeriaEric/paper/urge13.tex
+++ b/gesValeriaEric/paper/urge13.tex
@@ -70,7 +70,7 @@
 %\begin{center} \textbf{$\rightarrow$~~Preliminary draft~~$\leftarrow$} \\ (please inquire for new version, \small{\url{emagar@itam.mx}})  \end{center}
 
 \begin{abstract}
-\noindent  Among Presidents' formidable proactive legislative powers is fast-track authority, sometimes called urgency authority. Seven Latin American presidents have the constitutional prerogative to impose on lawmakers a short time limit to discuss and vote bills using this track. The U.S. president has also been granted this authority through statutes. Yet, fast-track mechanisms are not always intended to set the agenda and speed legislation along. While in most countries non-compliance with the deadline has consequences for the legislature, there are cases where the absence of congressional action before the target date has no repercussions. We claim that fast track mechanisms may conceal motivations unrelated to speed. We argue that this authority gives presidents the ability to protect bills and agreements from undesirable amendments, transforming the president into the sole member of a Rules Committee with the unique ability to impose closed rules on the floor.  We derive hypotheses from a formal model of restrictive rules and test them using data from Chile for the 1998--2014 period. Extant research on Chile has shown that most executive proposals become urgent at some stage, and while urgency correlates with the odds of passage, they have found little evidence that it speeds consideration of the president's agenda in Congress.\end{abstract}
+\noindent  Among Presidents' formidable proactive legislative powers is fast-track authority, sometimes called urgency authority. Seven Latin American presidents have the constitutional prerogative to impose on lawmakers a short time limit to discuss and vote bills using this track. The U.S. president has also been granted this authority through statutes. Yet, fast-track mechanisms are not always intended to set the agenda and speed legislation along. While in most countries non-compliance with the deadline has consequences for the legislature, there are cases where the absence of congressional action before the target date has no repercussions. We show that fast track mechanisms may conceal motivations unrelated to speed, as it prevents amendments on the floor. We argue that this authority gives presidents the ability to protect bills and agreements, transforming the president into the sole member of a Rules Committee with the unique ability to impose closed rules on the floor.  We derive hypotheses from a formal model of restrictive rules and test them using data from Chile for the 1998--2014 period. Extant research on Chile has shown that most executive proposals become urgent at some stage, and while urgency correlates with the odds of passage, they have found little evidence that it speeds consideration of the president's agenda in Congress.\end{abstract}
 
 % ME PARECE QUE ESTO DE CHILE NO TENDRIA QUE IR AHI, LO QUEREMOS HACER LO MAS GENERAL POSIBLE, NO? We suggest that the main reason behind the use of fast-track authority in Chile is to give presidents the ability to shield bills coming from friendly committees from floor amendments. Thus, instead of being a mechanism to speed up the process, presidents' fast-track authority is similar to imposing a "closed rule" on the floor.
 
@@ -222,7 +222,9 @@ EMM [7jun18]: HAY QUE CAMBIAR EL PARRAFO SIGUIENTE PARA QUE NO SEA REPETITIVO CO
 
 Despite these concerns, eight presidential systems of the Americas give executives fast-track authority: Brazil, Chile, Colombia, Ecuador, Mexico, Paraguay, Uruguay, and (in statutes) the United States \citep{morgenstern.2002b,garcia.montero.presidentes.2009}. A shared characteristic of fast track authority is that if the legislature fails to act within a certain period, the bill either becomes a law without the legislature's approval, or the whole legislative process comes to a halt until the floor votes on the bill. For example, in Brazil the president can declare any executive-initiated bill ``urgent'' at any time. The assembly must act on bills marked urgent within forty five days, else the bill takes precedence over all other legislative business. In Uruguay, legislators must act within a pre-specified, short period of time, as failure to do so converts the fast-tracked bill into law. Thus, by institutional design, the president has an effective tool to influence the congressional agenda, as she can force Congress the debate and vote on a bill.
 
-A puzzle emerges. Given the presumed motive of achieving a faster pace, it strikes that some fast track mechanisms are not binding. That is, no formal consequences fall upon legislators not complying with deadlines. Such are the cases of Chile, Colombia, and Mexico, where failure to act within the specified period neither stops the whole legislative process nor automatically turns the bill into law. Scholars have argued that the benefit of fast-track authority in these cases may lie in its signaling capacity. Quoting a former legal chief of staff at the Chilean Presidency, \citet{berrios.gamboa.fiscChile.2006} describe the thirty day deadline as ``merely symbolic, exerting no real pressure on Congress'' (p.~117). As we explain below, shorter deadlines can be chosen in Chile and \citet{aleman.navia.UrgChi.2009} see these as ``signals of presidential attention'' (p.~404), so the assembly may face unobserved political costs by ignoring or rejecting salient proposals. 
+However, it strikes that some fast track mechanisms are not binding. That is, no formal consequences fall upon legislators not complying with deadlines. Such are the cases of Chile, Colombia, and Mexico, where failure to act within the specified period neither stops the whole legislative process nor automatically turns the bill into law. Scholars have argued that the benefit of fast-track authority in these cases may lie in its signaling capacity. Quoting a former legal chief of staff at the Chilean Presidency, \citet{berrios.gamboa.fiscChile.2006} describe the deadline as ``merely symbolic, exerting no real pressure on Congress'' (p.~117), with \citet{aleman.navia.UrgChi.2009} seeing them  just as ``signals of presidential attention'' (p.~404). 
+
+%, so the assembly may face unobserved political costs by ignoring or rejecting salient proposals. 
 %Maybe add here some of the country details that Gisela is working on? This paragraph is too short!
 
 % ON CHILE - THIS GOES LATER The power of fast track authority in Chile fades when compared to its counterparts in the Americas. Although in Chile any bill can be declared urgent at any time, and the chamber must discuss and vote on the bill within 30 days (depending on the type of urgency), there are no consequences for non-compliance. When the period provided for Congress to act expires, the legislative process does not stop, nor do bills become law automatically. That is, there is no punishment for the legislature if it fails to make a decision within the specified number of days. Indeed, when the deadline for the expedite process is nearing, the president usually removes the previous urgency and issues a new one.  The data shows no difference in the speed of bills declared urgent, which take about 29 weeks until they reach the floor, and the rest, which take about 29.7 weeks. For example, in his study of the urgency prerogative in Chile's first post-transition administration, \citet{siavelis.2002} revealed the high frequency with which President Aylwin qualified bills as urgent, and found mixed evidence on whether such bills had a more expedited legislative process and an improved likelihood of passage. Given that fast track authority does not seem to expedite legislation,one would expect the president not to use them at all. However, this is not the case: about 60 percent of executive proposals are declared urgent during the legislative process. Why?
@@ -231,11 +233,13 @@ A puzzle emerges. Given the presumed motive of achieving a faster pace, it strik
 
 % ESTO TAMBIEN VA A LIT REVIEW Regarding the United States, \citet[][:145]{howell.moe.Relic2016} provide an argument in favor of providing presidents with fast-track authority. They argue that in order to have coherent, effective government, reform needs to put the president at the center of the legislative process by giving her fast-track powers: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time. [...] [T]he Constitution would be amended to grant the president \emph{permanent} fast-track authority over \emph{all} policy matters (including budgets and appointments).'' 
 
-Fast track authority may conceal purposes beyond providing signals or setting the agenda. This paper builds a solution to the puzzle presented by the existing literature. We claim that the very need for speedy passage calls for mechanisms to accelerate the legislative process, and those mechanisms, scarcely noticeable, protect bills from amendments on the floor. When the president labels a bill as urgent, this bill cannot be changed on the floor, which makes for a faster approval process but also protects presidential preferences.
+Fast track authority may conceal purposes beyond providing signals or setting the agenda. This paper builds a solution to the puzzle presented by the existing literature. First, we find that the literature has largely ignored an important consequence of the rule: when urgent bills come to the floor, \emph{they cannot be modified}. Legislators have to vote them up or down, with no possibility to introduce amendments. Thus, when qualified as urgent, the bill passed by the floor is identical to the one that emerged from committee. 
 
-We find that the literature has largely ignored this important consequence of the rule: when urgent bills come to the floor, \emph{they cannot be modified}. Legislators have to vote them up or down, with no possibility to introduce amendments. Thus, when qualified as urgent, the bill passed by the floor is identical to the one that emerged from committee. Urgency therefore protects the agreements reached in committee as they cannot be undone later in the plenary session.
+We claim that fast track protects the agreements reached in committee between the president and the committee chair, as they cannot be undone later in the plenary session. We find that the closer the preferences between the president and the committee chair, the greater the probabilities the president will use his fast track authority to protect a bill from changes in the legislative process. We also find that complex bills,  ar
 
-%While analyses on the United States are apply to fast-track authority only for trade agreements, it nonetheless seems suggestive that \citet{lohmann-ohalloran.1994} argue that Congress constrains the president under divided government and when partisan conflict is high. This seems to reinforce the idea that congress may want to secure the president's ability to negotiate and decide especially when her preferences are close to its own. This is precisely what we argue that is achieved through fast track when it involves mechanisms that restrict floor participation.
+We claim that urgency is a tool by which the president 
+
+%We claim that the very need for speedy passage calls for mechanisms to accelerate the legislative process, and those mechanisms, scarcely noticeable, protect bills from amendments on the floor. While analyses on the United States are apply to fast-track authority only for trade agreements, it nonetheless seems suggestive that \citet{lohmann-ohalloran.1994} argue that Congress constrains the president under divided government and when partisan conflict is high. This seems to reinforce the idea that congress may want to secure the president's ability to negotiate and decide especially when her preferences are close to its own. This is precisely what we argue that is achieved through fast track when it involves mechanisms that restrict floor participation.
 
 %Pongamos esta footnote cuando el empirical analisis este arreglado. \footnote{This is true as of March of 2014. Before then, it was true only for one type of urgency, ``supreme urgency'' (\emph{suma urgencia}).} 
 
